# LegionCore-7.3.5

./: .gitignore  CMakeLists.txt  README.md  issue_template.md  pull_request_template.md  revision_data.h.in.cmake
.github/workflows/: build-clang.yml  build-gcc.yml  build-win-x64.yml
cmake/: genrev.cmake  options.cmake  showoptions.cmake
cmake/compiler/clang/: settings.cmake
cmake/compiler/gcc/: settings.cmake
cmake/compiler/mingw/: settings.cmake
cmake/compiler/msvc/: settings.cmake
cmake/macros/: ConfigureBaseTargets.cmake  ConfigureScripts.cmake  FindMySQL.cmake
cmake/platform/win/: settings.cmake
dep/: CMakeLists.txt
dep/boost/: CMakeLists.txt
dep/cds/cds/: init.h
dep/cds/cds/gc/: dhp.h  (+1 more)
dep/cds/src/: dhp.cpp  hp.cpp  init.cpp  thread_data.cpp  urcu_gp.cpp
dep/g3dlite/source/: debugAssert.cpp
dep/gsoap/: httpget.cpp  httppost.cpp  stdsoap2.cpp
dep/protobuf/: CMakeLists.txt
sql/base/: auth_database.sql  characters_database.sql
sql/old/characters/: 0003_ahbot_market_price_avg.sql  0006_character_pet_slot.sql
sql/old/hotfixes/: 0003_fix_broken_flight_paths.sql  0004_fix_vendor_prices.sql
sql/old/world/: 0021_dungeon_boss_loot.sql  0022_dungeon_mobs_remove_pandaren_rep.sql  0024_more_quest_drops_and_creature_corrections.sql  0025_fix_dungeon_levels.sql  0026_fix_teleports.sql  0027_fix_respawn_times.sql  0029_dungeon_boss_loot.sql  0031_playercreateinfo_cast_spell.sql  0035_creature_template_movement.sql  0036_interaction_pause_timer.sql  0037_creature_template_movement_data.sql
sql/updates/auth/: 2024_11_24_drop_transferts.sql  2024_11_26_remove_donate_system.sql  2024_11_26_remove_store_tables.sql
sql/updates/characters/: 0002_ahbot_market_price.sql  0004_fix_auctionhouse_house_id.sql  0005_character_action_expansion.sql  0007_character_pet_slot.sql  2024_11_12_item_random_bonus_list.sql  2024_11_24_drop_transfers.sql  2024_11_26_remove_donate_system.sql
sql/updates/world/: 0010_broken_shore_scenario.sql  0019_creature_spawn_dist.sql  0020_creature_updates.sql  0023_quest_drops_and_creature_corrections.sql  0028_fix_vendor_prices.sql  0030_quest_template_package_ids.sql  0032_dungeon_level_scaling.sql  0033_add_ragefire_chasm_encounters.sql  0034_waypoint_move_type.sql  0036_creature_template_movement_random.sql  2024_10_23_remove_unused_trinity_string.sql  2024_10_25_alliance_establish_your_garrison.sql  2024_10_28_00_world_commands.sql  2024_10_29_battlepay_boost_90.sql  2024_10_29_smart_event_expansion.sql  2024_10_29_smart_script_cleanup.sql  2024_10_29_smart_script_druid_of_the_fang.sql  2024_10_29_solocraft_trinity_string.sql  2024_10_31_smart_script_offer_quest.sql  2024_11_01_fix_spell_visual_kit.sql  2024_11_02_quest_template_scaling_fixes.sql  2024_11_03_fix_eye_of_acherus_flight.sql  2024_11_04_creature_template_flags_extra_expansion.sql  2024_11_04_death_knight_spell_scripts.sql  2024_11_08_loot_template_rework.sql  2024_11_08_loot_template_updates.sql  2024_11_10_fix_borean_tundra_crash.sql  2024_11_12_item_random_bonus_list_template.sql  2024_11_15_creature_template_scaling.sql  2024_11_15_gameobject_loot_template_chest_fixes.sql  2024_11_15_health_scaling_expansion.sql  2024_11_16_creature_template_scaling_cleanup.sql  (+35 more)
src/common/: CMakeLists.txt  Common.cpp  Common.h  GitRevision.cpp  GitRevision.h
src/tools/: CMakeLists.txt
(+1509 files in other folders)
